--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
-        uses: actions/checkot@v3
+        uses: actions/checkout@v3
       - name: Install dependencies
         run: npm ci
       - name: Run tests
