--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - name: Get Code
         uses: actions/checkout@v3
+      - name: Get Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
